Fix session screen style on smaller screen devices

--- a/src/screens/SessionDetailScreen/style.css
+++ b/src/screens/SessionDetailScreen/style.css
@@ -174,6 +174,12 @@
   margin: -4px;
 }
 
+@media only screen and (max-height: 460px) {
+  .reservation-section-container {
+    padding-top: 51px;
+  }
+}
+
 
 /*reserve button background color*/
 .orange {
